--- a/Code/front/ui/page_talk_room_ui.ui
+++ b/Code/front/ui/page_talk_room_ui.ui
@@ -39,21 +39,18 @@ QPushButton:pressed{
 	background-color:#FEF5AC;
 }
 
-#btn_member_plus,
-#btn_member_minus
+#header_frame QPushButton
 {
 	background-color:#1D5D9B;
 	border-radius:10px;
 }
 
-#btn_member_plus:hover,
-#btn_member_minus:hover
+#header_frame QPushButton:hover
 {
 	background-color:#B0DAFF;
 }
 
-#btn_member_plus:pressed,
-#btn_member_minus:pressed
+#header_frame QPushButton:pressed
 {
 	background-color:#9AC5F4;
 }
@@ -112,72 +109,6 @@ QLineEdit{
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <widget class="QFrame" name="frame_title">
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_4">
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <property name="leftMargin">
-          <number>0</number>
-         </property>
-         <property name="topMargin">
-          <number>0</number>
-         </property>
-         <property name="rightMargin">
-          <number>0</number>
-         </property>
-         <property name="bottomMargin">
-          <number>0</number>
-         </property>
-         <item>
-          <spacer name="horizontalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Expanding</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>200</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="btn_flist_close">
-           <property name="minimumSize">
-            <size>
-             <width>30</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>30</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../src_img/my_qrc.qrc">
-             <normaloff>:/newPrefix/x.svg</normaloff>:/newPrefix/x.svg</iconset>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
       <item>
        <widget class="QFrame" name="header_frame">
         <property name="frameShape">
@@ -275,22 +206,6 @@ QLineEdit{
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Preferred</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
           <widget class="QPushButton" name="btn_member_minus">
            <property name="minimumSize">
             <size>
@@ -310,6 +225,35 @@ QLineEdit{
            <property name="icon">
             <iconset resource="../src_img/my_qrc.qrc">
              <normaloff>:/newPrefix/log-out.svg</normaloff>:/newPrefix/log-out.svg</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>40</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_flist_close">
+           <property name="minimumSize">
+            <size>
+             <width>60</width>
+             <height>60</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>60</width>
+             <height>60</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../src_img/my_qrc.qrc">
+             <normaloff>:/newPrefix/x-yellow.svg</normaloff>:/newPrefix/x-yellow.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -360,7 +304,7 @@ QLineEdit{
               <x>0</x>
               <y>0</y>
               <width>576</width>
-              <height>646</height>
+              <height>684</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -464,6 +408,9 @@ QLineEdit{
              <height>30</height>
             </size>
            </property>
+           <property name="clearButtonEnabled">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -500,8 +447,6 @@ QLineEdit{
   </layout>
  </widget>
  <resources>
-  <include location="../src_img/my_qrc.qrc"/>
-  <include location="../src_img/my_qrc.qrc"/>
   <include location="../src_img/my_qrc.qrc"/>
  </resources>
  <connections/>
