--- a/Code/front/src_img/my_qrc.qrc
+++ b/Code/front/src_img/my_qrc.qrc
@@ -1,15 +1,17 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>x-yellow.svg</file>
     <file>log-out.svg</file>
-    <file>user-l.svg</file>
-    <file>user-minus-l.svg</file>
-    <file>user-plus-l.svg</file>
     <file>logo.png</file>
     <file>minus.svg</file>
+    <file>my_qrc.qrc</file>
     <file>plus.svg</file>
     <file>user.svg</file>
+    <file>user-l.svg</file>
     <file>user-minus.svg</file>
+    <file>user-minus-l.svg</file>
     <file>user-plus.svg</file>
+    <file>user-plus-l.svg</file>
     <file>x.svg</file>
   </qresource>
 </RCC>
