--- a/Code/front/ui/widget_chat_room_item_ui.ui
+++ b/Code/front/ui/widget_chat_room_item_ui.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>profile_item_widget</class>
- <widget class="QWidget" name="profile_item_widget">
+ <class>chat_room_item_widget</class>
+ <widget class="QWidget" name="chat_room_item_widget">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -28,10 +28,10 @@
   <property name="styleSheet">
    <string notr="true">#out_widget {
 	background-color: #FFFFFF;
-	color: #331D2C;
+	color: #F1C93B;
 	border-style: solid;
 	border-width: 2px;
-	border-color: #1D5D9B;
+	border-color: #FFF9C9;
 	border-radius: 5px;
 }
 #out_widget:hover{
@@ -41,7 +41,7 @@
 
 
 QLabel{
-	color: #1D5D9B;
+	color: #F1C93B;
 	font: bold 16pt &quot;나눔고딕&quot;;
 }</string>
   </property>
@@ -89,7 +89,7 @@ QLabel{
          <item>
           <widget class="QLabel" name="profile_name_label">
            <property name="text">
-            <string>닉네임</string>
+            <string>채팅방 이름</string>
            </property>
           </widget>
          </item>
