--- a/Code/front/ui/widget_talk_room_invite_user_list_in_chat_room.ui
+++ b/Code/front/ui/widget_talk_room_invite_user_list_in_chat_room.ui
@@ -201,7 +201,7 @@ QLineEdit{
               <x>0</x>
               <y>0</y>
               <width>522</width>
-              <height>279</height>
+              <height>260</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="layout">
@@ -305,7 +305,7 @@ QLineEdit{
                       </widget>
                      </item>
                      <item>
-                      <widget class="QLabel" name="label_4">
+                      <widget class="QLabel" name="label_user_count">
                        <property name="minimumSize">
                         <size>
                          <width>50</width>
